seo: add dynamic meta tags, sitemap, robots.txt, and proper 404 page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,84 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Softadastra</title>
+
+    <title>Softadastra — Offline-first Web Runtime</title>
+
+    <meta
+      name="description"
+      content="Softadastra is a foundational runtime built around a robust sync engine (WAL/outbox), secure P2P transport, and edge nodes for caching and store-and-forward. Cloud optional."
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#0b0f14" />
+
+    <link rel="canonical" href="https://softadastra.com/" />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+
+    <meta property="og:site_name" content="Softadastra" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Softadastra — Offline-first Web Runtime"
+    />
+    <meta
+      property="og:description"
+      content="Offline-first · Local-first · Resilient Web Runtime. Sync engine (WAL/outbox), secure P2P transport, edge nodes. Cloud optional."
+    />
+    <meta property="og:url" content="https://softadastra.com/" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dwjbed2xb/image/upload/v1762624310/logo-softadastra_ksv72b.png"
+    />
+    <meta property="og:image:alt" content="Softadastra logo" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Softadastra — Offline-first Web Runtime"
+    />
+    <meta
+      name="twitter:description"
+      content="Foundational runtime with sync (WAL/outbox), P2P transport, and edge nodes. Cloud optional."
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/dwjbed2xb/image/upload/v1762624310/logo-softadastra_ksv72b.png"
+    />
+    <meta name="twitter:site" content="@softadastra" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Softadastra",
+        "url": "https://softadastra.com/",
+        "logo": "https://res.cloudinary.com/dwjbed2xb/image/upload/v1762624310/logo-softadastra_ksv72b.png",
+        "sameAs": [
+          "https://github.com/softadastra/softadastra",
+          "https://x.com/softadastra",
+          "https://youtube.com/@softadastra"
+        ]
+      }
+    </script>
   </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
