--- a/index.html
+++ b/index.html
@@ -78,9 +78,81 @@
         ]
       }
     </script>
+    <style>
+      :root {
+        --sa-bg: #0b0f14;
+        --sa-dot: #ff9900;
+      }
+
+      #app-loading {
+        position: fixed;
+        inset: 0;
+        display: grid;
+        place-items: center;
+        background: var(--sa-bg);
+        z-index: 9999;
+        opacity: 1;
+        transition: opacity 160ms ease, visibility 0ms linear 160ms;
+        visibility: visible;
+      }
+
+      #app-loading.is-hiding {
+        opacity: 0;
+        visibility: hidden;
+      }
+
+      .sa-dots {
+        display: flex;
+        align-items: center;
+        gap: 16px;
+      }
+
+      .sa-dots span {
+        width: 18px;
+        height: 18px;
+        border-radius: 999px;
+        background: var(--sa-dot);
+        opacity: 0.25;
+        transform: translateY(0);
+        animation: saDot 1.2s ease-in-out infinite;
+        box-shadow: 0 10px 28px rgba(0, 0, 0, 0.35);
+      }
+
+      .sa-dots span:nth-child(2) {
+        animation-delay: 0.15s;
+      }
+      .sa-dots span:nth-child(3) {
+        animation-delay: 0.3s;
+      }
+
+      @keyframes saDot {
+        0%,
+        100% {
+          transform: translateY(0);
+          opacity: 0.25;
+        }
+        40% {
+          transform: translateY(-10px);
+          opacity: 0.95;
+        }
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        .sa-dots span {
+          animation: none;
+          opacity: 0.6;
+        }
+      }
+    </style>
   </head>
 
   <body>
+    <div id="app-loading" aria-label="Loading">
+      <div class="sa-dots" aria-hidden="true">
+        <span></span><span></span><span></span>
+      </div>
+    </div>
+
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
