seo: switch favicons to cloudinary to avoid rewrite issues

--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
 
     <link rel="canonical" href="https://softadastra.com/" />
 
-    <!-- Favicons -->
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/favicon/apple-touch-icon.png" />
+    <!-- Favicons & PWA -->
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dwjbed2xb/image/upload/v1767987143/favicon-32x32_uihwwh.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dwjbed2xb/image/upload/v1767987143/apple-touch-icon_kqnm9l.png"
+    />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/favicon/favicon-32x32.png"
+      href="https://res.cloudinary.com/dwjbed2xb/image/upload/v1767987143/favicon-32x32_uihwwh.png"
     />
     <link
       rel="icon"
       type="image/png"
-      sizes="16x16"
-      href="/favicon/favicon-16x16.png"
+      sizes="192x192"
+      href="https://res.cloudinary.com/dwjbed2xb/image/upload/v1767987143/android-chrome-192x192_woo6gl.png"
     />
-    <link rel="manifest" href="/favicon/site.webmanifest" />
 
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Open Graph -->
     <meta property="og:site_name" content="Softadastra" />
     <meta property="og:type" content="website" />
     <meta
@@ -49,6 +57,7 @@
     />
     <meta property="og:image:alt" content="Softadastra logo" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -64,6 +73,7 @@
     />
     <meta name="twitter:site" content="@softadastra" />
 
+    <!-- Structured data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -78,6 +88,7 @@
         ]
       }
     </script>
+
     <style>
       :root {
         --sa-bg: #0b0f14;
